--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
-    "mongoose": "^8.8.1"
+    "mongoose": "^8.8.1",
+    "roupas_femininas": "file:"
   }
 }
